feat: Добавил посты, но еще не проверял их работоспособность